--- a/i3.config
+++ b/i3.config
@@ -59,9 +59,9 @@ bindsym $mod+Right focus right
 bindsym $mod+h split horizontal
 bindsym $mod+v split vertical
 
-bindsym $mod+s exec /usr/local/bin/simplenote
-bindsym $mod+g exec /home/dilip/GoLand-2019.2/bin/goland.sh
-bindsym $mod+m exec /usr/bin/chromium-browser
+bindsym $mod+s exec /usr/bin/simplenote
+bindsym $mod+g exec /snap/bin/goland
+
 
 bindsym $mod+k exec /usr/bin/keepassx
 
