--- a/i3.config
+++ b/i3.config
@@ -5,6 +5,7 @@
 # This defines which key super maps to on your keyboard.  
 # Alt key is Mod1, and Windows key is Mod4
 set $mod Mod4
+set $barcmd i3status
 
 # Color values are defined in ~/.Xresources-regolith
 
@@ -268,9 +269,13 @@ set_from_resource $i3-wm.bar.font i3-wm.bar.font "pango:Source Code Pro Medium 1
 
 # Configure the bar
 bar {
+#  font pango:monospace 4
+  status_command $barcmd --config ~/.config/i3/status.conf
+#}
+
   font $i3-wm.bar.font
   separator_symbol " "
-  status_command i3xrocks -c ~/.config/i3xrocks/i3xrocks.conf
+#  status_command i3xrocks -c ~/.config/i3xrocks/i3xrocks.conf
   tray_output none
   strip_workspace_numbers yes
 
