--- a/i3.config
+++ b/i3.config
@@ -62,7 +62,7 @@ bindsym $mod+v split vertical
 
 bindsym $mod+s exec /usr/bin/simplenote
 bindsym $mod+g exec /snap/bin/goland
-
+bindsym $mod+c exec /snap/bin/code
 
 bindsym $mod+k exec /usr/bin/keepassx
 
@@ -159,7 +159,7 @@ bindsym $mod+Escape exec gnome-screensaver-command --lock
 bindsym $mod+Shift+s exec systemctl suspend
 
 # shortcuts for common system configuration tasks
-bindsym $mod+c exec gnome-control-center
+#bindsym $mod+c exec gnome-control-center
 bindsym $mod+w exec gnome-control-center wifi
 bindsym $mod+b exec gnome-control-center bluetooth
 bindsym $mod+d exec gnome-control-center display
