Add shorcut for teams

--- a/i3.config
+++ b/i3.config
@@ -63,6 +63,7 @@ bindsym $mod+v split vertical
 bindsym $mod+s exec /usr/bin/simplenote
 bindsym $mod+g exec /snap/bin/goland
 bindsym $mod+c exec /snap/bin/code
+bindsym $mod+m exec /snap/bin/teams-for-linux
 
 bindsym $mod+k exec /usr/bin/keepassx
 
