Add current i3 config

--- a/i3.config
+++ b/i3.config
@@ -2,7 +2,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-# This defines which key super maps to on your keyboard.  
+# This defines which key super maps to on your keyboard.
 # Alt key is Mod1, and Windows key is Mod4
 set $mod Mod4
 set $barcmd i3status
@@ -61,11 +61,13 @@ bindsym $mod+h split horizontal
 bindsym $mod+v split vertical
 
 bindsym $mod+s exec /usr/bin/simplenote
-bindsym $mod+g exec /snap/bin/goland
+bindsym $mod+g exec /opt/GoLand-2020.1/bin/goland.sh
 bindsym $mod+c exec /snap/bin/code
-bindsym $mod+m exec /snap/bin/teams-for-linux
-
-bindsym $mod+k exec /usr/bin/keepassx
+bindsym $mod+m exec /usr/bin/teams
+bindsym $mod+a exec /usr/bin/slack
+bindsym $mod+e exec /usr/bin/remmina
+bindsym $mod+n exec /usr/bin/bash /home/dilip/snow_vpn_setup.sh
+bindsym $mod+k exec /usr/bin/keepassx "/home/dilip/Dropbox/dilips.kdbx"
 
 # move windows in workspaces
 bindsym $mod+Shift+Left move left
@@ -162,10 +164,12 @@ bindsym $mod+Shift+s exec systemctl suspend
 # shortcuts for common system configuration tasks
 #bindsym $mod+c exec gnome-control-center
 bindsym $mod+w exec gnome-control-center wifi
-bindsym $mod+b exec gnome-control-center bluetooth
-bindsym $mod+d exec gnome-control-center display
-bindsym $mod+n exec gnome-control-center remmina
+#bindsym $mod+b exec gnome-control-center bluetooth
+#bindsym $mod+d exec gnome-control-center display
+#bindsym $mod+n exec gnome-control-center remmina
 bindsym $mod+p exec spotify
+bindsym $mod+b exec /usr/bin/brave-browser
+
 
 # resize window (you can also use the mouse for that)
 mode "Resize Mode" {
@@ -218,7 +222,7 @@ set_from_resource $focused_inactive.color.border i3-wm.client.focused_inactive.c
 set_from_resource $focused_inactive.color.background i3-wm.client.focused_inactive.color.background "#073642"
 set_from_resource $focused_inactive.color.text i3-wm.client.focused_inactive.color.text "#839496"
 set_from_resource $focused_inactive.color.indicator i3-wm.client.focused_inactive.color.indicator "#073642"
-set_from_resource $focused_inactive.color.child_border i3-wm.client.focused_inactive.color.child_border 
+set_from_resource $focused_inactive.color.child_border i3-wm.client.focused_inactive.color.child_border
 
 set_from_resource $unfocused.color.border i3-wm.client.unfocused.color.border "#002b36"
 set_from_resource $unfocused.color.background i3-wm.client.unfocused.color.background "#073642"
