--- a/i3.config
+++ b/i3.config
@@ -62,7 +62,7 @@ bindsym $mod+v split vertical
 
 bindsym $mod+s exec /usr/bin/simplenote
 bindsym $mod+g exec /opt/GoLand-2020.1/bin/goland.sh
-bindsym $mod+c exec /snap/bin/code
+bindsym $mod+c exec /usr/bin/code
 bindsym $mod+m exec /usr/bin/teams
 bindsym $mod+a exec /usr/bin/slack
 bindsym $mod+e exec /usr/bin/remmina
