--- a/status.conf
+++ b/status.conf
@@ -17,10 +17,10 @@ order += "run_watch Docker"
 order += "path_exists VPN"
 #order += "ipv6"
 order += "wireless wlan0"
-order += "ethernet eth0"
+#order += "ethernet eth0"
 order += "volume master"
 order += "battery 0"
-order += "cpu_temperature 0"
+#order += "cpu_temperature 0"
 order += "load"
 order += "tztime local"
 
