--- a/status.conf
+++ b/status.conf
@@ -13,14 +13,13 @@ general {
 
 order += "disk /"
 order += "run_watch Docker"
-#order += "run_watch DHCP"
 order += "path_exists VPN"
-#order += "ipv6"
-order += "wireless wlan0"
-#order += "ethernet eth0"
+
+order += "wireless wlp59s0"
+
 order += "volume master"
 order += "battery 0"
-#order += "cpu_temperature 0"
+
 order += "load"
 order += "tztime local"
 
@@ -54,7 +53,7 @@ run_watch DHCP {
 }
 
 path_exists VPN {
-	path = "/proc/sys/net/ipv4/conf/tun0"
+	path = "/proc/sys/net/ipv4/conf/ppp0"
 }
 
 tztime local {
