--- a/i3.config
+++ b/i3.config
@@ -275,7 +275,7 @@ set_from_resource $i3-wm.bar.font i3-wm.bar.font "pango:Source Code Pro Medium 1
 # Configure the bar
 bar {
 #  font pango:monospace 4
-  status_command $barcmd --config ~/etc/regolith/i3/status.conf
+  status_command $barcmd --config /etc/regolith/i3/status.conf
 #}
 
   font $i3-wm.bar.font
